--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "repository": "https://github.com/remix-run/changelog-github/tree/main",
   "scripts": {
     "build": "tsup",
+    "build:internal": "npm run build -- --config tsup.internal.config.ts && copyfiles ./package.json ./node_modules/@remix-run/changelog-github",
+    "postinstall": "npm run build:internal",
     "test": "vitest"
   },
   "dependencies": {
@@ -18,7 +20,9 @@
     "dotenv": "^8.1.0"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.24.1",
     "@changesets/parse": "^0.3.13",
+    "copyfiles": "^2.4.1",
     "prettier": "^2.7.1",
     "tsup": "^6.1.3",
     "typescript": "^4.7.4",
