--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@remix-run/changelog-github",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "description": "A changelog entry generator for GitHub that links to commits, PRs and users",
   "main": "dist/changelog-github.js",
   "module": "dist/changelog-github.mjs",
@@ -11,6 +11,9 @@
     "build": "tsup",
     "build:internal": "npm run build -- --config tsup.internal.config.ts && copyfiles ./package.json ./node_modules/@remix-run/changelog-github",
     "postinstall": "npm run build:internal",
+    "changeset": "changeset",
+    "changeset:version": "changeset version",
+    "changeset:release": "npm run build && changeset publish",
     "test": "vitest"
   },
   "dependencies": {
