--- a/package.json
+++ b/package.json
@@ -30,5 +30,11 @@
     "tsup": "^6.1.3",
     "typescript": "^4.7.4",
     "vitest": "^0.18.1"
-  }
+  },
+  "files": [
+    "dist",
+    "CHANGELOG.md",
+    "README.md",
+    "package.json"
+  ]
 }
